# soft-algorithms

./: .gitignore  LICENSE  README.md
.github/actions/setup-rust/: action.yaml
.github/workflows/: graph-project.yaml
algos/src/: factorial.rs  main.rs  prime_factorial.rs  quick_find.rs  quick_union.rs  union_find.rs  weighted_quick_union.rs
algos/src/exercises/: sort.rs
assignment-1/: Cargo.toml  README.md
assignment-1/src/: bubble_sort.rs  linear_search.rs  main.rs  queue.rs
assignment-2/: README.md
assignment-2/documents/: Crypt1.txt  Crypt2.txt  Crypt3.txt
assignment-2/src/: binary_tree.rs  ceasar_decoder.rs  main.rs  two_three_tree.rs
graph-project/: .env.dev  .env.local  Cargo.toml  Dockerfile  README.md  TODO.md  dev.docker-compose.yml  docker-compose.yml  refinery.toml  start.sh
graph-project/.github/actions/setup-rust/: action.yaml
graph-project/.github/workflows/: build-and-test.yaml
graph-project/conf/: .env.prod.template  docker-compose.yaml  docker-compose.yaml.template
graph-project/crates/db/migrations/: V1__init.sql  V2__roads.sql
graph-project/crates/db/src/: connection.rs  lib.rs  model.rs
graph-project/crates/map/: Cargo.toml
graph-project/crates/map/src/: dijkstra.rs  lib.rs
graph-project/crates/map/tests/: dijkstra.rs
graph-project/crates/map/tests/common/: mod.rs
graph-project/server/: .env  Cargo.toml  Dockerfile  start.sh
graph-project/server/crates/db/: Cargo.toml
graph-project/server/crates/db/src/: connection.rs  lib.rs  model.rs
graph-project/server/crates/map/: Cargo.toml
graph-project/server/crates/map/src/: bfs.rs  dfs.rs  dijkstra.rs  lib.rs
graph-project/server/crates/map/tests/: dijkstra.rs  map.rs
graph-project/server/src/: main.rs
graph-project/src/: app.rs  main.rs
graph-project/src/graph-server/: main.rs
graph-project/web/: .env  .eslintignore  .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
graph-project/web/src/: App.tsx  axios.ts
hash-tables-assignment/: Cargo.toml  README.md
hash-tables-assignment/src/: hash_table.rs  main.rs
java-algos/: pom.xml
java-algos/src/main/java/dk/tobiasz/: Main.java  MyArrayList.java  MyLinkedList.java
java-algos/src/test/java/dk/tobiasz/: MyArrayListTest.java  MyLinkedListTest.java
notes/: logical-equivalance.md
regular-expressions/: Cargo.toml
regular-expressions/src/: main.rs
