[package]
name = "graph-project"
version = "0.1.1"
edition = "2021"
description = "This graph project was given to us at CphBusiness. It is supposed to make us learn about different algorithms in graph theory"
authors = ["Tobias Zimmermann <tobias.zimmer007@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tobias-z/soft-algorithms/graph-project"

[dependencies]
db = { path = "crates/db" }
dotenv = "0.15.0"

[[bin]]
name = "graph-server"
path = "src/graph-server/main.rs"

[workspace]
members = [
    "crates/db",
    "crates/map",
]
