[package]
name = "graph-project"
version = "0.1.1"
edition = "2021"
description = "This graph project was given to us at CphBusiness. It is supposed to make us learn about different algorithms in graph theory"
authors = ["Tobias Zimmermann <tobias.zimmer007@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tobias-z/soft-algorithms/graph-project"

[dependencies]
dotenv = "0.15.0"
map = { path = "./crates/map" }
rocket = {version = "=0.5.0-rc.3", features = ["json"]}

[workspace]
members = [
    "crates/db",
    "crates/map"
]
